--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -53,6 +53,7 @@
   'formSaved': __('Form saved.'),
   'customFieldSaved': __('Custom field saved.'),
   'placeFormBellowPages': _x('Below pages', 'This is a text on a widget that leads to settings for form placement'),
+  'placeFormBellowPagesDescription': __('This form placement allows you to add this form at the end of all the pages or posts, below the content.'),
   'placeFormBellowAllPages': _x('Below all pages', 'This is a text on a switch if a form should be displayed bellow all pages'),
   'placeFormBellowAllPosts': _x('Below all posts', 'This is a text on a switch if a form should be displayed bellow all posts'),
   'addFormWidgetHint': __('Add this form to a [link]widget area[/link].'),
