Create toggle component
[MAILPOET-2738]

--- a/assets/css/src/mailpoet-plugin.scss
+++ b/assets/css/src/mailpoet-plugin.scss
@@ -30,6 +30,7 @@
 @import 'components/reviewRequest';
 @import 'components/stats';
 @import 'components/importExport';
+@import 'components/toggle';
 @import 'components/newsletterEditor/mixins/transitions';
 @import 'components/newsletterEditor/variables';
 @import 'components/newsletterEditor/common';
