--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -54,8 +54,8 @@
   'customFieldSaved': __('Custom field saved.'),
   'placeFormBellowPages': _x('Below pages', 'This is a text on a widget that leads to settings for form placement'),
   'placeFormBellowPagesDescription': __('This form placement allows you to add this form at the end of all the pages or posts, below the content.'),
-  'placeFormBellowAllPages': _x('Below all pages', 'This is a text on a switch if a form should be displayed bellow all pages'),
-  'placeFormBellowAllPosts': _x('Below all posts', 'This is a text on a switch if a form should be displayed bellow all posts'),
+  'placeFormBellowAllPages': _x('Display on all pages', 'This is a text on a switch if a form should be displayed bellow all pages'),
+  'placeFormBellowAllPosts': _x('Display on all posts', 'This is a text on a switch if a form should be displayed bellow all posts'),
   'addFormWidgetHint': __('Add this form to a [link]widget area[/link].'),
   'addFormShortcodeHint': __('[link]Use Gutenberg block[/link] available on any page or post. Or use the shortcode [shortcode].'),
   'addFormPhpIframeHint': __('Use [link]PHP[/link] or [link]iFrame[/link].'),
