--- a/views/form/editor.html
+++ b/views/form/editor.html
@@ -56,6 +56,7 @@
   'placeFormBellowPagesDescription': __('This form placement allows you to add this form at the end of all the pages or posts, below the content.'),
   'placeFormBellowAllPages': _x('Display on all pages', 'This is a text on a switch if a form should be displayed bellow all pages'),
   'placeFormBellowAllPosts': _x('Display on all posts', 'This is a text on a switch if a form should be displayed bellow all posts'),
+  'formPlacementSave': _x('Save', 'Text on a button to save a form'),
   'addFormWidgetHint': __('Add this form to a [link]widget area[/link].'),
   'addFormShortcodeHint': __('[link]Use Gutenberg block[/link] available on any page or post. Or use the shortcode [shortcode].'),
   'addFormPhpIframeHint': __('Use [link]PHP[/link] or [link]iFrame[/link].'),
